<resources>
    <string name="app_name">Maltor App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="header_how_to_use">How To Use</string>
    <string name="title_how_to_use">How To Use Scan Feature</string>
    <string name="nav_howToUse">How To Use</string>
    <string name="title_scan">Scan</string>
    <string name="title_Account">Account</string>

    
    <string name="howtouse_step1">Select the application you want to scan</string>
    <string name="howtouse_step2">Choose the Algorithm and Click Scan Button</string>
    <string name="howtouse_step3">Information will be displayed</string>

    <string name="chose_algorithm">Choose one of the algorithm</string>
    <string name="algorithm_one">Extreme Gradient Boost</string>
    <string name="algorithm_two">Random Forest</string>


    <string name="copy_right">D3TI Del Institut of Technology&#169;2022 - All Right Reserved</string>
    <string name="title_splash">Malware Detector</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="malware_detail_header">Malware Detector</string>
    <string name="malware_detail">MalToR is an application which can analyze mobile applications and detect malware from the application</string>

    <string name="best_accuration_header">Best Accuration</string>
    <string name="best_accuration_detail">MalToR can scan with high accuracy made with research and datacience</string>

    <string name="scanning_detail_header">Scanning Apps</string>
    <string name="scanning_detail">MalToR can scan applications by selecting one or more applications in your phone</string>

    <string name="btn_get_started">Get Started</string>

    <string name="example_long_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English.</string>
    <string name="scanning_title">Scanning Apps</string>
    <string name="scanning_wait">Still scanning your Apps \nPlease Wait!</string>
    <string name="error_title">Upss! Something wrong here</string>
    <string name="error_content">You can choose other app or\nyou can try again to scanning your apps</string>
    <string name="btn_try_again">Try Again</string>
    <string name="btn_back">Back</string>
    <string name="btn_detail">Detail</string>
    <string name="btn_edit">Edit Profile</string>

    <string name="xg_title_info">What is Extreme Gradient Boost ?</string>
    <string name="xg_description">XGBoost (eXtreme Gradient Boosting) is one of the most loved machine learning algorithms at Kaggle. It can be used for supervised learning tasks such as Regression, Classification, and Ranking</string>

    <string name="rf_title_info">What is Random Forest ?</string>
    <string name="rf_description">Random Forest is a popular machine learning algorithm that belongs to the supervised learning technique. It can be used for both Classification and Regression problems in Machine learning</string>
</resources>