<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".ui.error.ErrorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/error_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:textColor="#595959"
            android:fontFamily="@font/latoregular"
            android:text="@string/error_title"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#343F4B"
            android:fontFamily="@font/latoregular"
            android:text="@string/error_content"
            android:textAlignment="center" />
    </LinearLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:backgroundTint="#6c757d"
                android:fontFamily="@font/robotoregular"
                android:text="@string/btn_back"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTryAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#0069D9"
                android:text="@string/btn_try_again"
                android:fontFamily="@font/robotoregular"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>