<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".ui.tutorial.MalwareDetailFragment"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/landing1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/latoregular"
            android:layout_marginBottom="39dp"
            android:text="@string/scanning_detail_header"
            android:textColor="#C1000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/latoregular"
            android:text="@string/scanning_detail"
            android:textAlignment="center"
            android:textSize="18dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGettingReady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/robotoregular"
            android:backgroundTint="#0069D9"
            android:text="@string/btn_get_started" />
    </LinearLayout>

</RelativeLayout>