<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.algoritma.AlogrithmSelectFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:padding="56px"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chose_algorithm"
            android:fontFamily="@font/latoregular"
            android:textSize="22sp"
            android:textColor="@color/teksScanApps" />

        <RadioGroup
            android:id="@+id/algorithm_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioBtnExtremeGradientBoost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/algorithm_one"
                    android:fontFamily="@font/latoregular"
                    android:textSize="18dp"
                    android:theme="@style/CardView.Light"
                    android:buttonTint="@color/radio_button"/>

                <ImageView
                    android:id="@+id/infoExtremeGradientBoost"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_info_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioBtnRandomForest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/algorithm_two"
                    android:fontFamily="@font/latoregular"
                    android:textSize="18dp"
                    android:buttonTint="@color/radio_button"/>

                <ImageView
                    android:id="@+id/infoRandomForest"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_info_24" />
            </LinearLayout>

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:layout_marginBottom="30dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#8492A6"
            android:text="Cancel"
            android:textSize="14sp"
            android:fontFamily="@font/robotoregular"
            android:layout_marginRight="50dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="Scan"
            android:fontFamily="@font/robotoregular"
            android:textSize="14sp"
            android:backgroundTint="#0069D9" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BC504E4E"
        android:id="@+id/descriptionLayout"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_centerInParent="true"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="@string/app_name"
                        android:id="@+id/titleAlgorithm"
                        android:layout_gravity="center_vertical"/>
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:id="@+id/imgCancel"
                        android:src="@drawable/ic_baseline_close_24"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/descriptionAlgorithm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    tools:text="@string/example_long_text"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</RelativeLayout>