<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.howtouse.HowToUseFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logoMaltor"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dp"
            android:src="@drawable/maltor_logo" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoMaltor"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_how_to_use"
                    android:textAlignment="center"
                    android:fontFamily="@font/latoregular"
                    android:textSize="23dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/latoregular"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_height="40dp"
                        android:src="@drawable/hands_icon"
                        android:layout_marginRight="10dp"
                        />
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/howtouse_step1"
                        android:textSize="19dp"
                        android:fontFamily="@font/latoregular"
                        android:layout_marginStart="20px"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/setting_icon"
                        android:layout_marginRight="10dp"/>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/howtouse_step2"
                        android:textSize="19dp"
                        android:fontFamily="@font/latoregular"
                        android:layout_marginStart="20px"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/think_icon"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center_vertical"/>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/howtouse_step3"
                        android:textSize="19dp"
                        android:fontFamily="@font/latoregular"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20px"
                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</ScrollView>