<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.loading.LoadingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/algorithmUsed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/app_name"
            android:fontFamily="@font/latoregular"
            android:textColor="#595959"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardUseCompatPadding="true"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="250dp"
                android:orientation="vertical"
                android:paddingVertical="20dp"
                android:paddingHorizontal="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_baseline_file_upload_24" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/latoregular"
                        android:text="@string/scanning_title"
                        android:textColor="#595959"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp">

                    <ProgressBar
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginRight="10dp"
                        android:indeterminateTint="#FF9052" />

                    <TextView
                        android:id="@+id/scanningAppName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/latoregular"
                        android:textColor="#595959"
                        android:text="@string/scanning_wait"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>